[package]
name = "treasuror"
version = "0.5.0"
authors = ["Reuben Staley <lighthousemaniac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
numeral = "1.0.0"
tabular = { version = "0.1.4", default-features = false }
