[package]
name = "assetlib"
version = "1.2.1"
authors = ["Richard Snider <lighthousemaniac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
nom = "6.1"
numeral = "1.0.0"
textwrap = "0.13.2"
tabular = "0.1.4"
